@@ -1,3 +1,12 @@
+2005-03-25  Rob Savoye  <rob@bertha.welcomehome.org>
+
+	* gameswf/gameswf_impl.cpp: Check for socket data every time
+	through the advance loop. Don't use an interupt handler, it's
+	orders of magnitude too slow.
+	* gameswf/gameswf_xmlsocket.cpp: Reduce by a huge amount the
+	select timeout.
+
+
 2005-03-24  Rob Savoye  <rob@bertha.welcomehome.org>
 
 	* gameswf/gameswf_xml.cpp (extractNode): New method to recursively
